[gd_scene load_steps=18 format=2]

[ext_resource path="res://app/icons/generic_down.svg" type="Texture" id=2]
[ext_resource path="res://app/icons/generic_add.svg" type="Texture" id=3]
[ext_resource path="res://app/interface/list_view/list_view.tscn" type="PackedScene" id=4]
[ext_resource path="res://app/interface/drop_container/drop_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://app/modules/screens/folders/folders_screen.gd" type="Script" id=6]
[ext_resource path="res://app/modules/playable_track_list/playable_track_list.tscn" type="PackedScene" id=7]
[ext_resource path="res://app/modules/screens/folders/folder_view.tscn" type="PackedScene" id=8]
[ext_resource path="res://app/modules/screens/folders/folders_list_view.gd" type="Script" id=9]
[ext_resource path="res://app/icons/generic_remove.svg" type="Texture" id=10]
[ext_resource path="res://app/interface/icon_button/icon_button.gd" type="Script" id=11]

[sub_resource type="StyleBoxEmpty" id=10]
content_margin_top = 8.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id=11]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxEmpty" id=12]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=13]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=14]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=1]

[node name="FoldersScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
custom_constants/separation = 0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1266.0
margin_bottom = 30.0
custom_styles/normal = SubResource( 10 )
text = "FOLDERS_TITLE"
align = 1

[node name="FoldersView" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 30.0
margin_right = 1266.0
margin_bottom = 706.0
size_flags_vertical = 3
script = ExtResource( 9 )
item_scene = ExtResource( 8 )
editable = true

[node name="Container" parent="VBoxContainer/FoldersView" index="0"]
margin_right = 1266.0

[node name="Extra" type="VBoxContainer" parent="VBoxContainer/FoldersView"]
margin_right = 1266.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="Space" type="Control" parent="VBoxContainer/FoldersView/Extra"]
margin_right = 1266.0
mouse_filter = 2

[node name="Add" type="Button" parent="VBoxContainer/FoldersView/Extra"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 617.0
margin_top = 4.0
margin_right = 649.0
margin_bottom = 36.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_constants/hseparation = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
text = "FOLDER_CREATE"
icon = ExtResource( 3 )
clip_text = true
script = ExtResource( 11 )

[node name="Empty" type="Label" parent="VBoxContainer/FoldersView"]
margin_top = 315.0
margin_right = 1266.0
margin_bottom = 361.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_styles/normal = SubResource( 2 )
text = "FOLDERS_EMPTY"
align = 1
autowrap = true

[node name="FolderContainer" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="PlayableTrackList" parent="FolderContainer" instance=ExtResource( 7 )]
visible = false
margin_top = 706.0
margin_right = 1266.0
margin_bottom = 1412.0

[node name="Top" parent="FolderContainer/PlayableTrackList" index="0"]
margin_right = 1266.0

[node name="Drop" type="Button" parent="FolderContainer/PlayableTrackList/Top" index="0"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 8.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
custom_constants/hseparation = 0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
icon = ExtResource( 2 )
clip_text = true
script = ExtResource( 11 )

[node name="Title" parent="FolderContainer/PlayableTrackList/Top" index="1"]
margin_left = 34.0
margin_right = 1198.0
caret_blink_speed = 0.5

[node name="Remove" type="Button" parent="FolderContainer/PlayableTrackList/Top" index="2"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 8.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
custom_constants/hseparation = 0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
text = "FOLDER_REMOVE"
icon = ExtResource( 10 )
clip_text = true
script = ExtResource( 11 )

[node name="Play" parent="FolderContainer/PlayableTrackList/Top" index="3"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1236.0
margin_right = 1266.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 14 )

[node name="Contents" parent="FolderContainer/PlayableTrackList" index="1"]
margin_right = 1266.0
margin_bottom = 706.0
custom_styles/panel = SubResource( 1 )

[node name="TrackListView" parent="FolderContainer/PlayableTrackList/Contents" index="0"]
margin_right = 1266.0
margin_bottom = 676.0

[node name="Empty" parent="FolderContainer/PlayableTrackList/Contents" index="1"]
margin_top = 315.0
margin_right = 1266.0
margin_bottom = 361.0

[node name="RemoveDialog" type="ConfirmationDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 77.0
size_flags_horizontal = 0
size_flags_vertical = 0
dialog_text = "FOLDER_REMOVE_CONFIRM"

[connection signal="visibility_changed" from="." to="." method="_on_FoldersScreen_visibility_changed"]
[connection signal="opened" from="VBoxContainer/FoldersView" to="." method="open"]
[connection signal="pressed" from="VBoxContainer/FoldersView/Extra/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="FolderContainer/PlayableTrackList/Top/Drop" to="." method="_on_Drop_pressed"]
[connection signal="pressed" from="FolderContainer/PlayableTrackList/Top/Remove" to="." method="_on_Remove_pressed"]
[connection signal="confirmed" from="RemoveDialog" to="." method="_on_RemoveDialog_confirmed"]

[editable path="VBoxContainer/FoldersView"]
[editable path="FolderContainer/PlayableTrackList"]
